tests/smt2/error/shadow.smt2
(declare-fun f () Bool)
(declare-fun f (Bool) Bool)